--- a/certificate_of_employment/views/certificate_of_employment.xml
+++ b/certificate_of_employment/views/certificate_of_employment.xml
@@ -6,7 +6,20 @@
         <field name="arch" type="xml">
             <form string="Certificate of Employment" create="false">
                 <header>
-
+                    <field name="employee_certificate_id" invisible="1" force_save="1"/>
+                    <field name="approver_id" invisible="1"/>
+                    <field name="approver_ids" invisible="1"/>
+                    <field name="is_approver" invisible="1"/>
+                    <field name="company_id" invisible="1"/>
+                    <button string="Submit" name="action_confirm_movement" type="object" class="oe_highlight"
+                            invisible="status != 'draft'" groups="advanced_movement.group_user"/>
+                    <button string="Approve" name="action_approved_movement" type="object" class="oe_highlight"
+                            invisible="is_approver == True"/>
+                
+                    <field name="status" widget="badge" invisible="1" decoration-info="status == 'to_approve'"
+                           decoration-warning="status == 'reject'" decoration-success="status == 'approved'"/>
+                    <field name="current_stage_id" widget="statusbar"
+                               domain="[('approval_flow_id', '!=', False), ('approval_flow_id', '=', employee_certificate_id),('company_id', '=', company_id)]"/>
                 </header>
                 <sheet>
                     <group>
@@ -23,7 +36,7 @@
                         </group>
                         <group>
                             <field name="posting_date" widget="date"/>
-                            <field name="company"/>
+                            <field name="company_id"/>
                             <field name="from_date" class="o_custom_from_date" />
                             <field name="to_date" class="o_custom_to_date" /> 
                         </group>
@@ -107,5 +120,4 @@
         sequence="10"
         web_icon="certificate_of_employment,static/src/description/coe.png"/>
 
-    
 </odoo>
