--- a/certificate_of_employment/views/certificate_of_employment.xml
+++ b/certificate_of_employment/views/certificate_of_employment.xml
@@ -11,7 +11,7 @@
                     <field name="approver_ids" invisible="1"/>
                     <field name="is_approver" invisible="1"/>
                     <field name="company_id" invisible="1"/>
-                    <div class="js_template_using_owl"></div>s
+                    <div class="js_template_using_owl"></div>
                     <button string="Submit" name="action_confirm_movement" type="object" class="oe_highlight"
                             invisible="status != 'draft'" groups="advanced_movement.group_user"/>
                     <button string="Approve" name="action_approved_movement" type="object" class="oe_highlight"
@@ -21,6 +21,7 @@
                            decoration-warning="status == 'reject'" decoration-success="status == 'approved'"/>
                     <field name="current_stage_id" widget="statusbar"
                                domain="[('approval_flow_id', '!=', False), ('approval_flow_id', '=', employee_certificate_id),('company_id', '=', company_id)]"/> -->
+                    <div class="js_template_using_owl"></div>
                 </header>
                 <sheet>
                     <group>
@@ -34,7 +35,7 @@
                         </group>
                         <group>
                             <field name="posting_date" widget="date"/>
-                            <field name="company_id"/>
+                            <field name="company"/>
                             <field name="from_date" class="o_custom_from_date" />
                             <field name="to_date" class="o_custom_to_date" /> 
                         </group>
