Update: removed the remarks field

--- a/disciplinary_action/views/disciplinary-action-views.xml
+++ b/disciplinary_action/views/disciplinary-action-views.xml
@@ -22,7 +22,7 @@
                         </group>
                     </group>
                     <group>
-                        <field name="remarks"/>
+                 <!--        <field name="remarks"/> -->
                         <field name="hearing_remarks"/>
                     </group>
                     <div class="oe_chatter">
