Feat: added sanction description

--- a/disciplinary_action/views/disciplinary-action-views.xml
+++ b/disciplinary_action/views/disciplinary-action-views.xml
@@ -12,6 +12,7 @@
                             <field name="employee"/>
                             <field name="employee_name"/>
                             <field name="sanction"/>
+                            <field name="description"/>
                         </group>
                         <group>
                             <field name="posting_date"/>
