--- a/disciplinary_action/views/disciplinary-action-views.xml
+++ b/disciplinary_action/views/disciplinary-action-views.xml
@@ -13,6 +13,8 @@
                             <field name="employee_name"/>
                             <field name="sanction"/>
                             <field name="description"/>
+                            <field name="offense"/>
+                            <field name="offense_description"/>
                         </group>
                         <group>
                             <field name="posting_date"/>
