Fix: spelling of checkbox

--- a/employee_accountability/views/employee_accountability.xml
+++ b/employee_accountability/views/employee_accountability.xml
@@ -37,11 +37,11 @@
                         </group>
                     </group>
                     
-                    <separator string="Issuance" invisible = "accountability_type == 'return' or accountability_type == False" />
-                    <separator string="Return" invisible = "accountability_type == 'issuance' or accountability_type == False"/>
+                    <separator string="Issuance" invisible = "accountability_type == 'return'" />
+                    <separator string="Return" invisible = "accountability_type == 'issuance'"/>
 
                     <!-- One2many Field for Form Items -->
-                    <notebook invisible="accountability_type == False">
+                    <notebook>
                     <page string="Form Items">
                     <group>
                         <field name="form_items" string="" widget="many2many_list"
@@ -51,13 +51,11 @@
                                 <field name="item_name"/>
                                 <field name="item_code"/>
                                 <field name="quantity"/>
-                                <field name="date_issue" readonly = "accountability_type == 'issuance' or accountability_type == False" width="10%" />
-                                <field name="return_to" readonly = "accountability_type == 'issuance' or accountability_type == False"  width="20%"/>
-                                <field name="date_return" readonly = "accountability_type == 'issuance' or accountability_type == False" width="10%"/>
+                                <field name="date_issue" readonly = "accountability_type == 'issuance' or accountability_type == False"/>
+                                <field name="return_to" readonly = "accountability_type == 'issuance' or accountability_type == False"/>
+                                <field name="date_return" readonly = "accountability_type == 'issuance' or accountability_type == False"/>
                                 <field name="accountability_type"/>
-                              
-                            </tree>
-                            
+                            </tree>            
                         </field>
                     </group>
                     </page>
