--- a/accountability/views/employee_accountability.xml
+++ b/accountability/views/employee_accountability.xml
@@ -42,16 +42,66 @@
 
                     <!-- One2many Field for Form Items -->
                     <notebook>
+                        <page string="Issuance Table" invisible = "accountability_type == 'return'" >
+                            <field name="issuance_table">
+                                <tree editable="bottom">
+                                    <field name="item_name"/>
+                                    <field name="item_code"/>
+                                    <field name="quantity"/>
+                                    <field name="date_issued"/>
+                                </tree>
+                            </field>
+                        </page>
+
+                        <page string="Return Table" invisible = "accountability_type == 'issuance'">
+                            <field name="return_table">
+                                <tree editable="bottom">
+                                    <field name="item_name"/>
+                                    <field name="item_code"/>
+                                    <field name="quantity"/>
+                                    <field name="date_issued"/>
+                                    <field name="return_to"/>
+                                    <field name="date_returned"/>
+                                </tree>
+                            </field>
+                        </page>
                     
                     </notebook>
-                    
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread" options="{'live_update': True}"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                    </div> 
                 </sheet>
 
-                <div class="oe_chatter">
-                    <field name="message_ids" widget="mail_thread"/>
-                    <field name="activity_ids" widget="mail_activity"/>
-                </div>
+                
             </form>
+        </field>
+    </record>
+
+    <record id="view_issuance_tree" model="ir.ui.view">
+        <field name="name">issuance.tree</field>
+        <field name="model">issuance</field>
+        <field name="arch" type="xml">
+            <tree string="Issuance Table">
+                <field name="item_name"/>
+                <field name="item_code"/>
+                <field name="quantity"/>
+                <field name="date_issued"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_return_tree" model="ir.ui.view">
+        <field name="name">return.tree</field>
+        <field name="model">return</field>
+        <field name="arch" type="xml">
+            <tree string="Issuance Table">
+                <field name="item_name"/>
+                <field name="item_code"/>
+                <field name="quantity"/>
+                <field name="date_issued"/>
+            </tree>
         </field>
     </record>
 
