--- a/certificate_of_employment/views/certificate_of_employment.xml
+++ b/certificate_of_employment/views/certificate_of_employment.xml
@@ -7,14 +7,17 @@
             <form string="Certificate of Employment" create="false">
                 <header>
                     <group>
-                        <field name="employee_certificate_id" invisible="1" force_save="1"/>
-                        <field name="approver_id" invisible="1"/>
-                        <field name="approver_ids" invisible="1"/>
+                        <group>
+                            <field name="employee_certificate_id" invisible="0" force_save="1"/>
+                            <field name="approver_id" invisible="0"/>
+                        </group>
+                        <group>
+                                <field name="is_approver" invisible="0"/>
+                                <field name="company_id" invisible="0"/>
+                        </group>
                     </group>
-                    
                     <group>
-                        <field name="is_approver" invisible="1"/>
-                        <field name="company_id" invisible="1"/>
+                        <field name="approver_ids" invisible="0"/>
                     </group>
                    
                     <div class="js_template_using_owl"></div>
